--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Requires Python 3.11 or 3.12
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -77,7 +78,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2025.1
-pywin32==306
+pywin32; platform_system == "Windows"
 pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==26.0.3
